--- a/index.html
+++ b/index.html
@@ -9,13 +9,42 @@
   <body>
     <header>
       <div class="container text-center">
-        <figure class="logoBoolean">
-          <img src="./img/image.png" alt="logo Boolean">
-        </figure>
-        <h1>BooleanExpress</h1> 
+        <div class="row">
+          <div class="col">
+            <figure class="logoBoolean width: 5rem;">
+              <img src="./img/image.png" alt="logo Boolean">
+            </figure>
+            <h1>BooleanExpress</h1> 
+          </div>
+        </div>
       </div>
-  
     </header>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <main>
+        <div class="container">
+            <div class="row">
+                <div class="col-5">
+                  <div class="card p-3">
+                    <div class="form-group">
+                      <label for="Km">Km da percorrere</label>
+                      <input type="text" class="form-control" id="km" name="km">
+                    </div>
+                    <div class="form-group">
+                      <label for="eta">Eta del passeggero</label>
+                      <input type="text" class="form-control" id="eta" name="km">
+                    </div>
+                    <button type="button" class="btn btn-primary mt-3">Calcola</button>
+                  </div>
+                </div>
+                <div class="col-5" id="">
+                  <div class="card text-center">
+                    Li prezzo del biglieto è:
+                  </div>
+                </div>
+            </div>
+        </div>
+      </div>
+    </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>  
+    <script src="./js/app.js"></script>
   </body>
-</html>
+  </html>
